--- a/src/Components/Card/Card.css
+++ b/src/Components/Card/Card.css
@@ -1,16 +1,24 @@
 .card{
-    width: 40%;
-    height: 5%;
-    border: 1px solid black;
+    width: 50%;
+    height: 10%;
     border-radius: 10px;
-
+    box-shadow: 2px 5px 10px rgba(0, 0, 0, 0.2);
+    background-color: rgb(253, 252, 255);
     display: flex;
-    justify-content: center;
+    /* justify-content: center; */
     align-items: center;
 }
 
 .cardSon{
+    width: 25%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+.line{
+    width: 80%;
+    height: 1px;
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
 }
