--- a/src/Layout/layout.css
+++ b/src/Layout/layout.css
@@ -1,8 +1,10 @@
 .center{
     width: 100vw;
     height: 100vh;
+    position: relative;
     display: flex;
     flex-direction:column;
     justify-content: center;
     align-items: center;
 }
+
